# riski5

./: .gitignore  CLAUDE.md  README.md  TODO.md  cabal.project  flake.nix  fourmolu.yaml  riski5.cabal
app/: Top.hs
apps/: boot-linux-master.nix  boot-linux.nix  console.nix  flash-riski5.nix  jam-counter-probe.nix  load-linux.nix  load-sdram-jtag.nix  load-sdram-master.nix  sdram-state-probe.nix  sdram-write-pattern-test.nix
docs/: boot-rom-copilot.md  core-family.md  future-soc-configurability.md  linux-boot.md  multi-pll-sdram-design.md  references.md  sdram-hi-half-write-bug.md  verification.md
docs/de2/: README.md
docs/perf/: coremark-2026-04-23.md  coremark-history.md  jtag-uart-link-2026-04-28.md  phase-2b-attempt-2026-04-24.patch  sram-exec-probe-2026-04-24.md
docs/riscv/: README.md
docs/timing/: baseline-2026-04-21.fit.rpt  baseline-2026-04-21.md  baseline-2026-04-21.sta.rpt  pipeline5-2026-04-21.fit.rpt  pipeline5-2026-04-21.md  pipeline5-2026-04-21.sta.rpt
firmware/phase1/: CoreMark.hs  Emit.hs  FetchPolicy.hs  Hello.hs  HelloAExt.hs  HelloAmoStress.hs  HelloKthreadCreateStress.hs  HelloLrScStress.hs  HelloMdStress.hs  HelloRetStress.hs  HelloSchedStress.hs  HelloSdramDataStress.hs  HelloSdramExec.hs  HelloSdramHighStress.hs  HelloSdramStress.hs  HelloSramExec.hs  HelloStackStress.hs  HelloTimerIrq.hs  HelloTrapStress.hs  LinuxBoot.hs  LinuxBootMaster.hs  LinuxBootSim.hs  MemTest.hs  SdramLoader.hs
firmware/phase2/boot-rom/: linker.ld  start.c
firmware/phase2/coremark-port/: core_portme.c  core_portme.h  core_portme.mak  ee_printf.c  linker.ld  start.S
firmware/phase2/dts/: riski5.dts
firmware/phase2/init-rv32-nommu/: build_init_bflt.py  init.S
nix/: checks.nix  devshell.nix  treefmt.nix
pkgs/: default.nix
pkgs/boot-rom-rv32-nommu/: package.nix
pkgs/coremark/: bin-to-mif.py  gen-coremark-hs.py  package.nix
pkgs/init-rv32-nommu/: package.nix
pkgs/initramfs-rv32-nommu/: package.nix
pkgs/lib/: gen-bin-hs.py
pkgs/linux-rv32-nommu/: debug-schedule-printk.patch  package.nix  riski5-overlay.config
pkgs/riscv-formal/: package.nix
pkgs/riski5-boot-rom-gen/: package.nix
pkgs/riski5-core/: Riski5.qpf  Riski5.qsf  Riski5.sdc  package.nix
pkgs/riski5-core/altera-ip/jtag-master-shim/: altera_avalon_packets_to_master.v
pkgs/riski5-dtb/: package.nix
pkgs/riski5-formal/: checks.cfg  package.nix  wrapper.sv
pkgs/riski5-load-stream/: package.nix
pkgs/riski5-sim/: clash-manifest.json  package.nix
pkgs/riski5-sim/verilog/: riski5_sim_top.v
scripts/: all-flags-probe.tcl  boot-linux-master.tcl  core-bridge-probe.tcl  coremark-run.sh  freeze-trigger-probe.tcl  jam-counter-probe.tcl  jam-fsm-smoke.hs  load-linux.sh  load-sdram-jtag.sh  load-sdram-master.tcl  sdram-state-probe.tcl  sdram-write-pattern-test.tcl  uart-counter-probe.tcl
sim/: README.md  cdc_bridge_test.cpp  cdc_bridge_top.v  riski5_sdram_cdc_bridge.v  sdram_ip_behavioral.v
src/: Riski5.hs
src/Riski5/: ALU.hs  Asm.hs  AvalonMm.hs  Bram.hs  CSR.hs  Cdc.hs  Clint.hs  Compressed.hs  Core.hs  CoreCdcBridge.hs  Decode.hs  Domains.hs  Elf.hs  Encode.hs  FormalTop.hs  Gpio.hs  ISA.hs  JtagAvalonMaster.hs  JtagUart.hs  JtagUartAdapter.hs  Lcd.hs  MemMap.hs  Plic.hs  Reference.hs  Regfile.hs  Rvfi.hs  SdrController.hs  Sdram.hs  SdramCdcBridge.hs  Soc.hs  SocSim.hs  SpikeDriver.hs  Sram.hs
src/Riski5/Core/: Assembly.hs  Config.hs  IFetch.hs  Presets.hs
src/Riski5/Core/FU/: Amo.hs  MulDiv.hs
test/: AluSpec.hs  AsmSpec.hs  AvalonMmSpec.hs  BramCoreSpec.hs  BramSpec.hs  BramStallForwardSpec.hs  CdcSocIntegrationSpec.hs  CdcSpec.hs  ClintSpec.hs  CompressedSpec.hs  CoreCdcSpec.hs  CoreMarkRealBytes.hs  CoreMarkSimSpec.hs  CoreSimSpec.hs  CoreSpec.hs  DecodeSpec.hs  ExtIrqSpec.hs  HelloSpec.hs  IFetchSpec.hs  JalrStackSpec.hs  JtagLoadByteEnableSpec.hs  LcdSpec.hs  PipelineSpec.hs  PlicSocSpec.hs  PlicSpec.hs  ReferenceSpec.hs  RegfileSpec.hs  SchedStressSpec.hs  SdrControllerSpec.hs  SdramCdcSpec.hs  SdramExecSpec.hs  SdramSpec.hs  SdramTwoPortSpec.hs  SocChainIntegrationSpec.hs  SocHwSim.hs  SocSpec.hs  Spec.hs  SpikeDiffSpec.hs  SpikeDriverSpec.hs  SramExecSpec.hs  (+6 more)
tools/boot-rom/: Main.hs
tools/linux-hwsim/: Main.hs
tools/linux-sim/: Main.hs
tools/load-stream/: Main.hs
