cabal-version:      3.0
name:               riski5
version:            0.1.0
synopsis:           Clash RV32I soft core + minimal SoC for the Altera DE2
description:
  A pipelineless single-cycle RV32I (+Zicsr, M-mode, Zifencei) core
  written in Clash, targeted at the Altera DE2 (Cyclone II
  EP2C35F672C6). The ISA is defined at the Haskell type level and is
  the single source of truth for both the hardware decoder and the
  firmware assembler eDSL.

license:            (MIT OR BSD-3-Clause)
license-files:
  LICENSE-BSD
  LICENSE-MIT

author:             Mika Tammi
maintainer:         mikatammi@gmail.com
copyright:          2026 Mika Tammi
category:           Hardware
build-type:         Simple
extra-source-files: README.md
tested-with:        GHC ==9.10.3

source-repository head
  type:     git
  location: https://github.com/mikatammi/riski5

-- The `hwsim` flag activates the Verilator-backed whole-SoC
-- simulation test (test/SocHwSim.hs) that links against the
-- riski5-sim Nix package's libVriski5_sim_top.a + libverilated.a.
-- The flag is off by default so `cabal build` / `cabal test`
-- continue to work without Verilator + the sim library present.
--
-- To enable locally:
--
--     nix build .#riski5-sim
--     cabal test --flag=hwsim \
--       --extra-lib-dirs=$(readlink -f result)/lib \
--       --ghc-options='-optl-lVriski5_sim_top -optl-lverilated -optl-lstdc++'
--
-- Under CI / `nix build .#riski5-hwsim-check` these flags are
-- passed automatically; see pkgs/riski5-hwsim-check/package.nix.
--
-- We keep build-type: Simple because Cabal 3.12 doesn't allow
-- internal sublibraries (like riski5-top, riski5-firmware) under
-- build-type: Custom.
flag hwsim
  description:
    Enable the Verilator-backed whole-SoC simulation test
    (test/SocHwSim.hs). Requires the riski5-sim Nix package.

  default:     False
  manual:      True

common warnings
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-export-lists
    -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

common language
  default-language: GHC2021

library
  import:          warnings, language
  hs-source-dirs:  src
  exposed-modules:
    Riski5
    Riski5.ALU
    Riski5.Asm
    Riski5.AvalonMm
    Riski5.Bram
    Riski5.Core
    Riski5.Core.Assembly
    Riski5.Core.Config
    Riski5.Core.FU.MulDiv
    Riski5.Core.Presets
    Riski5.CSR
    Riski5.Decode
    Riski5.Elf
    Riski5.Encode
    Riski5.FormalTop
    Riski5.Gpio
    Riski5.ISA
    Riski5.JtagUart
    Riski5.Lcd
    Riski5.MemMap
    Riski5.Reference
    Riski5.Regfile
    Riski5.Rvfi
    Riski5.Sdram
    Riski5.Soc
    Riski5.SpikeDriver
    Riski5.Sram

  build-depends:
    , async          >=2.2  && <2.3
    , base           >=4.20 && <5
    , binary         >=0.8  && <0.9
    , bytestring     >=0.12 && <0.13
    , clash-prelude  ^>=1.8
    , containers     >=0.7  && <0.9
    , filepath       >=1.4  && <1.6
    , mtl            >=2.3  && <2.4
    , process        >=1.6  && <1.7
    , temporary      >=1.3  && <1.4

library riski5-top
  import:          warnings, language
  hs-source-dirs:  app
  exposed-modules: Top
  build-depends:
    , base
    , clash-prelude
    , riski5
    , riski5-firmware

library riski5-firmware
  import:          warnings, language
  hs-source-dirs:  firmware/phase1
  exposed-modules:
    CoreMark
    Hello
    MemTest

  build-depends:
    , base
    , clash-prelude
    , riski5

executable riski5-emit-hello
  import:         warnings, language
  main-is:        Emit.hs
  hs-source-dirs: firmware/phase1
  build-depends:
    , base
    , bytestring
    , clash-prelude
    , filepath         >=1.4 && <1.6
    , riski5
    , riski5-firmware

test-suite riski5-test
  import:         warnings, language
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: test
  other-modules:
    AluSpec
    AsmSpec
    AvalonMmSpec
    BramCoreSpec
    BramSpec
    BramStallForwardSpec
    CoreSimSpec
    CoreSpec
    DecodeSpec
    HelloSpec
    LcdSpec
    PipelineSpec
    ReferenceSpec
    RegfileSpec
    SdramSpec
    SocHwSim
    SocSpec
    SpikeDiffSpec
    SpikeDriverSpec
    SramSpec
    SramStallForwardSpec
    TrapSpec
    UartBackpressureSpec

  build-depends:
    , base
    , clash-prelude
    , containers
    , hedgehog         >=1.4  && <2
    , riski5
    , riski5-firmware
    , tasty            >=1.5  && <1.6
    , tasty-hedgehog   >=1.4  && <1.5
    , tasty-hunit      >=0.10 && <0.11

  if flag(hwsim)
    cpp-options:   -DHWSIM
    build-depends: verilambda
