cabal-version:      3.0
name:               riski5
version:            0.1.0
synopsis:           Clash RV32I soft core + minimal SoC for the Altera DE2
description:
  A pipelineless single-cycle RV32I (+Zicsr, M-mode, Zifencei) core
  written in Clash, targeted at the Altera DE2 (Cyclone II
  EP2C35F672C6). The ISA is defined at the Haskell type level and is
  the single source of truth for both the hardware decoder and the
  firmware assembler eDSL.

license:            (MIT OR BSD-3-Clause)
license-files:
  LICENSE-BSD
  LICENSE-MIT

author:             Mika Tammi
maintainer:         mikatammi@gmail.com
copyright:          2026 Mika Tammi
category:           Hardware
build-type:         Simple
extra-source-files: README.md
tested-with:        GHC ==9.10.3

source-repository head
  type:     git
  location: https://github.com/mikatammi/riski5

-- The `hwsim` flag activates the Verilator-backed whole-SoC
-- simulation test (test/SocHwSim.hs) that links against the
-- riski5-sim Nix package's libVriski5_sim_top.a + libverilated.a.
-- The flag is off by default so `cabal build` / `cabal test`
-- continue to work without Verilator + the sim library present.
--
-- To enable locally:
--
--     nix build .#riski5-sim
--     cabal test --flag=hwsim \
--       --extra-lib-dirs=$(readlink -f result)/lib \
--       --ghc-options='-optl-lVriski5_sim_top -optl-lverilated -optl-lstdc++'
--
-- Under CI / `nix build .#riski5-hwsim-check` these flags are
-- passed automatically; see pkgs/riski5-hwsim-check/package.nix.
--
-- We keep build-type: Simple because Cabal 3.12 doesn't allow
-- internal sublibraries (like riski5-top, riski5-firmware) under
-- build-type: Custom.
flag hwsim
  description:
    Enable the Verilator-backed whole-SoC simulation test
    (test/SocHwSim.hs). Requires the riski5-sim Nix package.

  default:     False
  manual:      True

common warnings
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-export-lists
    -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

common language
  default-language: GHC2021

library
  import:          warnings, language
  hs-source-dirs:  src
  exposed-modules:
    Riski5
    Riski5.ALU
    Riski5.Asm
    Riski5.AvalonMm
    Riski5.Bram
    Riski5.Clint
    Riski5.Compressed
    Riski5.Core
    Riski5.CoreCdcBridge
    Riski5.Core.Assembly
    Riski5.Core.Config
    Riski5.Core.FU.Amo
    Riski5.Core.FU.MulDiv
    Riski5.Core.IFetch
    Riski5.Core.Presets
    Riski5.Cdc
    Riski5.CSR
    Riski5.Decode
    Riski5.Domains
    Riski5.Elf
    Riski5.Encode
    Riski5.FormalTop
    Riski5.Gpio
    Riski5.ISA
    Riski5.JtagAvalonMaster
    Riski5.JtagUart
    Riski5.JtagUartAdapter
    Riski5.Lcd
    Riski5.MemMap
    Riski5.Plic
    Riski5.Reference
    Riski5.Regfile
    Riski5.Rvfi
    Riski5.Sdram
    Riski5.SdramCdcBridge
    Riski5.SdrController
    Riski5.Soc
    Riski5.SocSim
    Riski5.SpikeDriver
    Riski5.Sram

  build-depends:
    , async          >=2.2  && <2.3
    , base           >=4.20 && <5
    , binary         >=0.8  && <0.9
    , bytestring     >=0.12 && <0.13
    , clash-prelude  ^>=1.8
    , containers     >=0.7  && <0.9
    , filepath       >=1.4  && <1.6
    , mtl            >=2.3  && <2.4
    , process        >=1.6  && <1.7
    , temporary      >=1.3  && <1.4

library riski5-top
  import:          warnings, language
  hs-source-dirs:  app
  exposed-modules: Top
  build-depends:
    , base
    , clash-prelude
    , riski5
    , riski5-firmware

library riski5-firmware
  import:          warnings, language
  hs-source-dirs:  firmware/phase1
  exposed-modules:
    CoreMark
    FetchPolicy
    Hello
    HelloAExt
    HelloAmoStress
    HelloLrScStress
    HelloSdramDataStress
    HelloSdramExec
    HelloSdramStress
    HelloSramExec
    HelloStackStress
    HelloTimerIrq
    HelloTrapStress
    LinuxBoot
    LinuxBootMaster
    LinuxBootSim
    MemTest
    SdramLoader

  build-depends:
    , base
    , clash-prelude
    , riski5

executable riski5-emit-hello
  import:         warnings, language
  main-is:        Emit.hs
  hs-source-dirs: firmware/phase1
  build-depends:
    , base
    , bytestring
    , clash-prelude
    , filepath         >=1.4 && <1.6
    , riski5
    , riski5-firmware

executable riski5-load-stream
  import:         warnings, language
  main-is:        Main.hs
  hs-source-dirs: tools/load-stream
  build-depends:
    , base
    , bytestring  >=0.12 && <0.13
    , process     >=1.6  && <1.7

executable riski5-boot-rom-gen
  import:         warnings, language
  main-is:        Main.hs
  hs-source-dirs: tools/boot-rom
  build-depends:
    , base
    , copilot
    , copilot-c99
    , copilot-language
    , directory   >=1.3 && <1.4
    , filepath    >=1.4 && <1.6

executable riski5-linux-sim
  import:         warnings, language
  main-is:        Main.hs
  hs-source-dirs: tools/linux-sim
  build-depends:
    , base
    , bytestring   >=0.12 && <0.13
    , containers   >=0.7  && <0.8
    , riski5

-- | Verilator-backed Linux boot runner. Uses the same riski5-sim
-- libVriski5_sim_top.a + libverilated.a path as `cabal test
-- --flag=hwsim`. Loads a kernel + DTB into the in-Verilog SDRAM
-- chip model via the wrapper's MEM_INIT_ADDR/DATA/WRITE pins,
-- then runs N cycles capturing UART bytes — same observable
-- shape as `riski5-linux-sim` (which uses the pure-Haskell
-- reference SoC) but driving the Clash-emitted Verilog under
-- Verilator. Diagnostically: lets us see if the silicon hang
-- reproduces against our actual RTL or only against
-- Quartus-synthesized + IP-driven hardware.
executable riski5-linux-hwsim
  import:         warnings, language
  main-is:        Main.hs
  hs-source-dirs: tools/linux-hwsim
  if flag(hwsim)
    build-depends:
      , base
      , bytestring   >=0.12 && <0.13
      , verilambda
  else
    buildable: False

test-suite riski5-test
  import:         warnings, language
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: test
  other-modules:
    AluSpec
    AsmSpec
    AvalonMmSpec
    BramCoreSpec
    BramSpec
    BramStallForwardSpec
    CdcSocIntegrationSpec
    CdcSpec
    ClintSpec
    CompressedSpec
    CoreMarkRealBytes
    ExtIrqSpec
    CoreMarkSimSpec
    CoreSimSpec
    CoreSpec
    DecodeSpec
    HelloSpec
    IFetchSpec
    JalrStackSpec
    JtagLoadByteEnableSpec
    LcdSpec
    PipelineSpec
    PlicSocSpec
    PlicSpec
    ReferenceSpec
    RegfileSpec
    SdramExecSpec
    SdramSpec
    SdramTwoPortSpec
    SdrControllerSpec
    SocChainIntegrationSpec
    SramTwoPortSpec
    SocHwSim
    SocSpec
    SpikeDiffSpec
    SpikeDriverSpec
    SramExecSpec
    SramSpec
    SramStallForwardSpec
    TimerIrqSpec
    TrapSpec
    UartBackpressureSpec

  build-depends:
    , base
    , clash-prelude
    , containers
    , hedgehog         >=1.4  && <2
    , riski5
    , riski5-firmware
    , tasty            >=1.5  && <1.6
    , tasty-hedgehog   >=1.4  && <1.5
    , tasty-hunit      >=0.10 && <0.11

  if flag(hwsim)
    cpp-options:   -DHWSIM
    build-depends: verilambda
